# research_agent

./: .gitignore  opencode.json
research-agent/: .gitignore  AGENT_LOG.md  ARCHITECTURE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  desktop.py  docker-compose.yml  nginx.conf  paperpilot.spec  pyproject.toml  render.yaml  requirements.txt
research-agent/.github/workflows/: ci.yml
research-agent/data_integration_test/: research_agent.db
research-agent/data_integration_test/chroma_db/: chroma.sqlite3
research-agent/frontend/: package-lock.json  package.json  vite.config.ts
research-agent/frontend/src/: App.tsx  index.css  types.ts
research-agent/my_tools/: file_io.py  web_scraper.py
research-agent/plans/: 2026-07-09-research-agent-implementation.md
research-agent/specs/: 2026-07-09-research-agent-design.md
research-agent/src/research_agent/: __init__.py  agent.py  cli.py  (+20 more)
research-agent/src/research_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
research-agent/tests/: conftest.py  test_agent.py  test_agent_harness.py  test_chinese.py  test_cli.py  test_compressor.py  test_config.py  test_context.py  test_eval.py  test_guardrail.py  test_harness_mechanisms.py  test_ingestion.py  test_integration.py  test_integration_full.py  test_knowledge_graph.py  test_llm.py  test_loop.py  test_mcp_client.py  test_memory.py  test_resume.py  test_retrieval.py  test_router.py  test_search.py  test_skill.py  test_store.py  test_validate.py  test_vector_store.py
(+31 files in other folders)
